Rename task response user_id to public_id
